tests/snapshots/spanshot_request@5500267185067106068.snap
---
source: tests/trace_solver.rs
description: "RuleOptions { ref_on_ref: AllocTemporary, mut_on_ref: Keep, allow_ref_pat_on_ref_mut: true, simplify_expressions: true, eat_two_layers: false, eat_inherited_ref_alone: true }"
---
Query: `[x, &y]: &[T, U]`

[x, &y] @ p: &[T, U]
// Applying rule `ConstructorRef`
x @ &(*p).0: &T
&y @ &(*p).1: &U
// Applying rule `Deref`
let x: &T = &(*p).0
y @ *&(*p).1: U

// Final bindings:
let x: &T = &(*p).0
let y: U = *&(*p).1
