tests/snapshots/spanshot_request@5622514032745134685.snap
---
source: tests/trace_solver.rs
description: "RuleOptions { ref_on_ref: AllocTemporary, mut_on_ref: Keep, allow_ref_pat_on_ref_mut: true, simplify_expressions: true }"
---
Query: `[ref x]: &mut [T]`

[ref x] @ p: &mut [T]
// Applying rule `ConstructorRef`
ref x @ &mut (*p).0: &mut T
// Applying rule `Binding`
x @ &&mut (*p).0: &&mut T

// Final bindings:
let x: &&mut T = &&mut (*p).0
